--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -44,7 +44,8 @@
     <ezy.ui.layout.LoadingLayout
         android:id="@+id/loading"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:llLoadingVisibility="true">
 
         <TextView
             android:layout_width="match_parent"
